feat: refactor patient creation and add user factory
